<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:text="@string/flash_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/flash_off"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="48sp" />

    <CheckBox
        android:id="@+id/checkBoxEnableFlashInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="77dp"
        android:text="@string/enable_flashlight" />

    <CheckBox
        android:id="@+id/checkBoxEnableShake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxEnableFlashInit"
        android:layout_below="@+id/checkBoxEnableFlashInit"
        android:layout_marginTop="15dp"
        android:text="@string/enable_shake_trim" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxEnableShake"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/checkBoxEnableFlashInit"
        android:text="@string/app_ver"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/checkBoxEnableFlashInit"
        android:text="@string/ver_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red" />

</RelativeLayout>
